latest section done

--- a/index.html
+++ b/index.html
@@ -147,7 +147,57 @@
         </div>
         <!-- start or carousel end  -->
     </header>
-    <main class=" md:container md:mx-auto">
+    <main class="md:container md:mx-auto">
+
+      <!-- feature section  -->
+      <section class="my-15 md:container md:mx-auto lg:p-24">
+        <h1 class="text-center text-5xl text-black font-semibold">Fetured Bikes In This Year</h1>
+        <div class="grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 mt-10 gap-4 p-5">
+          <img src="./images/others/feature-bike.png" alt="">
+          <img src="./images/others/feature-bike.png" alt="">
+          <img src="./images/others/feature-bike.png" alt="">
+        </div>
+      </section>
+      <!-- latest bike  -->
+      <section class="lg:p-24 mb-10">
+        <h3 class="text-center text-5xl text-black font-semibold mb-10">Latest Bike</h3>
+           <!--  cart container  -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-5">
+          <!-- cart one -->
+            <div class="card bg-base-100 shadow-xl">
+              <figure><img src="./images/others/latest1.png" alt="Shoes" /></figure>
+              <div class="card-body">
+                <h2 class="card-title text-3xl font-semibold">Ducati XDIAVEL S-73</h2>
+                <p class="text-base font-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions">
+                  <button class="btn btn-outline text-red-500 uppercase hobver:text-white hover:bg-bike-primary">Read More</button>
+                </div>
+              </div>
+            </div>
+          <!-- cart 2nd -->
+            <div class="card bg-base-100 shadow-xl">
+              <figure><img src="./images/others/latest2.png" alt="Shoes" /></figure>
+              <div class="card-body">
+                <h2 class="card-title text-3xl font-semibold">Ducati XDIAVEL S-73</h2>
+                <p class="text-base font-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions">
+                  <button class="btn btn-outline text-red-500 uppercase hobver:text-white hover:bg-bike-primary">Read More</button>
+                </div>
+              </div>
+            </div>
+          <!-- cart 3rd -->
+            <div class="card bg-base-100 shadow-xl">
+              <figure><img src="./images/others/latest3.png" alt="Shoes" /></figure>
+              <div class="card-body">
+                <h2 class="card-title text-3xl font-semibold">Ducati XDIAVEL S-73</h2>
+                <p class="text-base font-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                <div class="card-actions">
+                  <button class="btn btn-outline text-red-500 uppercase hobver:text-white hover:bg-bike-primary">Read More</button>
+                </div>
+              </div>
+            </div>
+          </div>
+      </section>
 
     </main>
     
