--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     </section>
     <!-- client section  -->
     <section class="lg:px-24 mt-14 ">
-      <h3 class="text-center text-5xl text-black font-semibold mb-10">Happy <span class="text-bike-primary">Clients
+      <h3 class="text-center text-5xl text-black font-semibold mb-10 p-5">Happy <span class="text-bike-primary">Clients
           says</span></h3>
       <!-- client card container  -->
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-5">
@@ -294,12 +294,75 @@
 
     </section>
     <!-- FAQ section  -->
-          <section class="lg:px-24 mt-14">
-            <h3 class="text-center text-5xl text-black font-semibold mb-10">Frequently Asked <span class="text-bike-primary"> Questions
-              </span></h3>
+    <section class="lg:px-24 mt-14">
+      <h3 class="text-center text-5xl text-black font-semibold p-5 mb-10">Frequently Asked <span class="text-bike-primary">
+          Questions
+        </span></h3>
+      <!-- hero section  -->
 
-        </section>
+      <div class="hero min-h-screen p-5 ">
+        <div class="hero-content flex-col lg:gap-12 lg:flex-row">
+          <img src="images/others/faq.png" class="lg:w-96 sm:w-3/4 rounded-lg shadow-2xl" />
+          <div>
+            <div class="collapse collapse-arrow border-1 border-neutral-400 ">
+              <input type="radio" name="my-accordion-2" checked="checked" /> 
+              <div class="collapse-title text-xl font-medium">
+                What are the most important things I should
+                know about riding a bike?
+              </div>
+              <div class="collapse-content"> 
+                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow border-1 border-neutral-200 ">
+              <input type="radio" name="my-accordion-2" /> 
+              <div class="collapse-title text-xl font-medium">
+                How can I tell if my helmet is old and I need a 
+                new one?
+              </div>
+              <div class="collapse-content"> 
+                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow border-1 border-neutral-200 ">
+              <input type="radio" name="my-accordion-2" /> 
+              <div class="collapse-title text-xl font-medium">
+                My bike has been in storage is it safe to ride?
+              </div>
+              <div class="collapse-content"> 
+                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+              </div>
+            </div>
+            <div class="collapse collapse-arrow border-1 border-neutral-200 ">
+              <input type="radio" name="my-accordion-2" /> 
+              <div class="collapse-title text-xl font-medium">
+                What rules should I follow when riding my bike?
+              </div>
+              <div class="collapse-content"> 
+                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    </section>
   </main>
+
+  <footer class="footer p-10 bg-neutral text-neutral-content">
+    <div>
+    
+      <p>ACME Industries Ltd.<br/>Providing reliable tech since 1992</p>
+    </div> 
+    <div>
+      <span class="footer-title">Get the App</span> 
+      <div class="grid grid-flow-col gap-4">
+        <a> <img class="w-30" src="./images/others/android.png" alt=""></a>
+        <a> <img class="w-30" src="./images/others/ios.png" alt=""></a>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
