--- a/index.html
+++ b/index.html
@@ -352,14 +352,14 @@
 
   <footer class="footer p-10 bg-neutral text-neutral-content">
     <div>
-    
+     
       <p>ACME Industries Ltd.<br/>Providing reliable tech since 1992</p>
     </div> 
     <div>
-      <span class="footer-title">Get the App</span> 
-      <div class="grid grid-flow-col gap-4">
-        <a> <img class="w-30" src="./images/others/android.png" alt=""></a>
-        <a> <img class="w-30" src="./images/others/ios.png" alt=""></a>
+      <span class="footer-title">Social</span> 
+      <div class="grid grid-cols-1 gap-4">
+        <a> <img class="w-36" src="./images/others/android.png" alt=""></a>
+        <a> <img class="w-36" src="./images/others/ios.png" alt=""></a>
       </div>
     </div>
   </footer>
